--- a/src/style/MenuBox.module.scss
+++ b/src/style/MenuBox.module.scss
@@ -1,5 +1,9 @@
 $gray-00: #f8f9fa; // 기본글자색
 
+.menu-box {
+  display: flex;
+  justify-content: center;
+}
 .menu-box__mask {
   background-color: #000;
   opacity: 0.8;
@@ -11,23 +15,31 @@ $gray-00: #f8f9fa; // 기본글자색
 }
 .menu-box__menus {
   position: fixed;
-  top: 35%;
-  width: 100%;
+  top: 30vh;
   z-index: 100;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 40px;
+  letter-spacing: 2px;
+  color: $gray-00;
 }
 .menu-box__menu {
-  font-size: 35px;
-  letter-spacing: 2px;
   margin: 10px 0;
+  text-decoration: none;
+}
+// 활성화된 라우터 표시
+.menu-box__menu-active {
+  margin: 10px 0;
+  text-decoration: underline;
+  text-decoration-style: double;
+  text-decoration-thickness: 1.5px;
 }
 .menu-box__exit {
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 900;
   letter-spacing: 2px;
   margin-top: 50px;
-  padding: 5px;
+  padding: 7px;
   border: 1px solid $gray-00;
 }
