--- a/src/style/Home.module.scss
+++ b/src/style/Home.module.scss
@@ -1,9 +1,7 @@
 $gray-00: #f8f9fa; // 기본글자색
 $gray-08: #343a40;
 .home {
-  border-right: 1px solid $gray-00;
-  border-left: 1px solid $gray-00;
-  padding: 20px 0;
+  padding: 0;
 }
 .test1 {
   background-color: $gray-08;
