--- a/src/style/Bus.module.scss
+++ b/src/style/Bus.module.scss
@@ -1,10 +1,10 @@
-$gray-00: #f8f9fa; // 기본글자색
-$gray-07: #495057;
+$backColor1: #413543;
+
 .bus {
   padding: 0;
 }
 .bus__block1 {
-  background-color: $gray-07;
+  background-color: $backColor1;
   margin: 0 10px;
   border-radius: 40px;
   height: 200px;
