--- a/src/style/Bus.module.scss
+++ b/src/style/Bus.module.scss
@@ -7,12 +7,11 @@ $backColor1: #413543;
   background-color: $backColor1;
   margin: 0 10px;
   border-radius: 40px;
-  height: 200px;
   display: flex;
   flex-direction: column;
+  padding: 30px 30px;
 }
 .bus__block1--title {
-  margin-top: 30px;
   font-size: 15px;
   text-align: center;
 }
