--- a/src/style/Bus.module.scss
+++ b/src/style/Bus.module.scss
@@ -12,6 +12,7 @@ $backColor1: #413543;
   display: flex;
   flex-direction: column;
   padding: 30px 30px;
+  margin-top: 10px;
 }
 .bus__block1--title {
   font-size: 15px;
