--- a/src/style/Bus.module.scss
+++ b/src/style/Bus.module.scss
@@ -1,4 +1,5 @@
 $backColor1: #413543;
+$gray8: #343a40;
 
 .bus {
   padding: 0;
@@ -11,13 +12,27 @@ div + .bus__block1 {
   margin-top: 10px;
 }
 .bus__block1 {
-  background-color: $backColor1;
-  border-radius: 40px;
   display: flex;
-  flex-direction: column;
-  padding: 30px 30px;
+  justify-content: center;
 }
-.bus__block1--title {
+.bus__block1 > div {
+  border-radius: 40px;
+  height: 180px;
+  width: 50%;
+}
+.bus__block1--left {
+  background-color: $gray8;
+}
+.bus__block1--right {
+  background-color: $backColor1;
+}
+.bus__block1--right > button {
+  border: 5px solid black;
+}
+.bus__block1--left + .bus__block1--right {
+  margin-left: 10px;
+}
+.bus__block--title {
   font-size: 15px;
   text-align: center;
 }
