--- a/src/style/Bus.module.scss
+++ b/src/style/Bus.module.scss
@@ -5,11 +5,11 @@ $gray8: #343a40;
   padding: 0;
 }
 .bus__body {
-  padding: 0 10px;
+  padding: 0 13px;
 }
 // 지도와 블럭 사이공간
 div + .bus__block1 {
-  margin-top: 10px;
+  margin-top: 13px;
 }
 .bus__block1 {
   display: flex;
@@ -25,12 +25,27 @@ div + .bus__block1 {
 }
 .bus__block1--right {
   background-color: $backColor1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.bus__block1--right > button {
-  border: 5px solid black;
+.bus__block1--right > div:nth-child(1) {
+  margin: 35px 0 0 13px;
+  font-size: 16px;
+}
+.bus__block1--right > div:nth-child(2) {
+  display: flex;
+  justify-content: right;
+  margin: 0 13px 13px 0;
+}
+.blcok1--right--sententce + .blcok1--right--sententce {
+  margin-top: 8px;
+}
+.refresh-button {
+  height: 45px;
 }
 .bus__block1--left + .bus__block1--right {
-  margin-left: 10px;
+  margin-left: 13px;
 }
 .bus__block--title {
   font-size: 15px;
