--- a/src/style/Header.module.scss
+++ b/src/style/Header.module.scss
@@ -8,6 +8,7 @@ $gray-09: #212529; // 기본배경색
   justify-content: space-between;
   align-items: center;
   height: 70px;
+  z-index: 100;
 }
 .header__logo {
   margin-left: 20px;
