--- a/src/style/Bus.module.scss
+++ b/src/style/Bus.module.scss
@@ -14,41 +14,62 @@ div + .bus__block1 {
 .bus__block1--left + .bus__block1--right {
   margin-left: 13px;
 }
-
 .bus__block1 {
   display: flex;
   justify-content: center;
 }
-.bus__block1 > div {
+.bus__block1--left {
   border-radius: 40px;
   height: 180px;
   width: 50%;
-}
-.bus__block1--left {
   background-color: $gray8;
+  display: -webkit-box; /* Webkit */
+  display: -moz-box; /* Mozilla */
   display: flex;
+  -webkit-box-orient: vertical; /* Webkit */
+  -webkit-box-direction: normal; /* Webkit */
+  -moz-box-orient: vertical; /* Mozilla */
+  -moz-box-direction: normal; /* Mozilla */
   flex-direction: column;
-  justify-content: center;
-  line-height: 35px;
+  -webkit-box-pack: justify; /* Webkit */
+  -moz-box-pack: justify; /* Mozilla */
+  justify-content: space-between;
+}
+.bus__block1--left-title {
+  margin-top: 30px;
+  font-size: 20px;
+  text-align: center;
 }
 .bus__block1--left-firstLine {
   display: flex;
   justify-content: center;
-  align-items: baseline;
+  align-items: center;
 }
-.bus__block1--left-secoundLine {
+.bus__block1--left-secLine {
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.bus__block1--left-firstLine-contents,
+.bus__block1--left-secLine-contents {
+  display: flex;
   align-items: baseline;
 }
-.bus__block1--left-secoundLine > div:nth-child(1) {
-  font-size: 60px;
+.bus__block1--left-firstLine-contents > div:nth-child(1),
+.bus__block1--left-secLine-contents > div:nth-child(1) {
+  font-size: 35px;
 }
-.bus__block1--left-secoundLine > div:nth-child(2) {
+.bus__block1--left-firstLine-contents > div:nth-child(2),
+.bus__block1--left-secLine-contents > div:nth-child(2) {
   font-size: 15px;
+  margin-left: 8px;
 }
 
 .bus__block1--right {
+  border-radius: 40px;
+  height: 180px;
+  width: 50%;
   background-color: $backColor1;
   display: -webkit-box; /* Webkit */
   display: -moz-box; /* Mozilla */
@@ -62,11 +83,16 @@ div + .bus__block1 {
   -moz-box-pack: justify; /* Mozilla */
   justify-content: space-between;
 }
-.bus__block1--right > div:nth-child(1) {
-  margin: 35px 0 0 13px;
-  font-size: 18px;
+.bus__block1--right--1 {
+  margin-top: 30px;
+  font-size: 20px;
+  text-align: center;
 }
-.bus__block1--right > div:nth-child(2) {
+// select box
+.bus__block1--right--2 {
+  margin-left: 13px;
+}
+.bus__block1--right--3 {
   display: -webkit-box; /* Webkit */
   display: -moz-box; /* Mozilla */
   display: flex;
@@ -75,10 +101,21 @@ div + .bus__block1 {
   justify-content: flex-end;
   margin: 0 13px 13px 0;
 }
-.blcok1--right--sententce + .blcok1--right--sententce {
-  margin-top: 8px;
-}
 .refresh-button {
-  cursor: pointer;
   height: 40px;
+  transition: all 80ms ease-in-out;
+  -webkit-transition: all 80ms ease-in-out; /* Webkit prefix */
+  -moz-transition: all 80ms ease-in-out; /* Mozilla prefix */
+  -o-transition: all 80ms ease-in-out; /* Opera prefix */
+  -ms-transition: all 80ms ease-in-out; /* IE prefix */
+  &:hover {
+    cursor: pointer;
+  }
+  &:active {
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3); /* Webkit prefix */
+    -moz-transform: scale(1.3); /* Mozilla prefix */
+    -o-transform: scale(1.3); /* Opera prefix */
+    -ms-transform: scale(1.3); /* IE prefix */
+  }
 }
