--- a/src/style/MenuBox.module.scss
+++ b/src/style/MenuBox.module.scss
@@ -31,6 +31,14 @@ $gray-00: #f8f9fa; // 기본글자색
 .menu-box__menu {
   margin: 10px 0;
   text-decoration: none;
+  -moz-transition: transform 80ms ease-in-out;
+  -webkit-transition: transform 80ms ease-in-out;
+  transition: transform 80ms ease-in-out;
+  &:active {
+    -moz-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+  }
 }
 // 활성화된 라우터 표시
 .menu-box__menu-active {
@@ -38,6 +46,14 @@ $gray-00: #f8f9fa; // 기본글자색
   text-decoration: underline;
   text-decoration-style: double;
   text-decoration-thickness: 1.5px;
+  -moz-transition: transform 80ms ease-in-out;
+  -webkit-transition: transform 80ms ease-in-out;
+  transition: transform 80ms ease-in-out;
+  &:active {
+    -moz-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+  }
 }
 .menu-box__exit {
   font-size: 15px;
@@ -46,6 +62,18 @@ $gray-00: #f8f9fa; // 기본글자색
   margin-top: 50px;
   padding: 7px;
   border: 1px solid $gray-00;
-  -webkit-border-radius: 5px; /* 웹킷 */
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
   border-radius: 5px;
+  -moz-transition: transform 80ms ease-in-out;
+  -webkit-transition: transform 80ms ease-in-out;
+  transition: transform 80ms ease-in-out;
+  &:hover {
+    cursor: pointer;
+  }
+  &:active {
+    -moz-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+  }
 }
