--- a/src/style/Title.module.scss
+++ b/src/style/Title.module.scss
@@ -7,7 +7,7 @@ $iconBackground: #404258;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin: 0 0 15px 0;
+  margin-bottom: 15px;
 }
 .title__icon {
   display: -webkit-box;
