--- a/src/style/MenuBox.module.scss
+++ b/src/style/MenuBox.module.scss
@@ -31,13 +31,17 @@ $gray-00: #f8f9fa; // 기본글자색
 .menu-box__menu {
   margin: 10px 0;
   text-decoration: none;
-  -moz-transition: transform 80ms ease-in-out;
-  -webkit-transition: transform 80ms ease-in-out;
-  transition: transform 80ms ease-in-out;
+  transition: all 80ms ease-in-out;
+  -webkit-transition: all 80ms ease-in-out; /* Webkit prefix */
+  -moz-transition: all 80ms ease-in-out; /* Mozilla prefix */
+  -o-transition: all 80ms ease-in-out; /* Opera prefix */
+  -ms-transition: all 80ms ease-in-out; /* IE prefix */
   &:active {
-    -moz-transform: scale(1.3);
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+    transform: scale(1.5);
+    -webkit-transform: scale(1.5); /* Webkit prefix */
+    -moz-transform: scale(1.5); /* Mozilla prefix */
+    -o-transform: scale(1.5); /* Opera prefix */
+    -ms-transform: scale(1.5); /* IE prefix */
   }
 }
 // 활성화된 라우터 표시
@@ -46,13 +50,17 @@ $gray-00: #f8f9fa; // 기본글자색
   text-decoration: underline;
   text-decoration-style: double;
   text-decoration-thickness: 1.5px;
-  -moz-transition: transform 80ms ease-in-out;
-  -webkit-transition: transform 80ms ease-in-out;
-  transition: transform 80ms ease-in-out;
+  transition: all 80ms ease-in-out;
+  -webkit-transition: all 80ms ease-in-out; /* Webkit prefix */
+  -moz-transition: all 80ms ease-in-out; /* Mozilla prefix */
+  -o-transition: all 80ms ease-in-out; /* Opera prefix */
+  -ms-transition: all 80ms ease-in-out; /* IE prefix */
   &:active {
-    -moz-transform: scale(1.3);
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+    transform: scale(1.5);
+    -webkit-transform: scale(1.5); /* Webkit prefix */
+    -moz-transform: scale(1.5); /* Mozilla prefix */
+    -o-transform: scale(1.5); /* Opera prefix */
+    -ms-transform: scale(1.5); /* IE prefix */
   }
 }
 .menu-box__exit {
