--- a/src/style/Bus.module.scss
+++ b/src/style/Bus.module.scss
@@ -21,7 +21,7 @@ div + .bus__block1 {
 }
 .bus__block1--left {
   border-radius: 40px;
-  height: 180px;
+  height: 170px;
   width: 50%;
   background-color: $gray8;
   display: -webkit-box; /* Webkit */
@@ -37,9 +37,13 @@ div + .bus__block1 {
   justify-content: space-between;
 }
 .bus__block1--left-title {
-  margin-top: 30px;
-  font-size: 5.2vw;
-  text-align: center;
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bus__block1--left-title > img {
+  height: 10.5vw;
 }
 .bus__block1--left-firstLine {
   display: flex;
@@ -50,7 +54,7 @@ div + .bus__block1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .bus__block1--left-firstLine-contents,
 .bus__block1--left-secLine-contents {
@@ -69,7 +73,7 @@ div + .bus__block1 {
 
 .bus__block1--right {
   border-radius: 40px;
-  height: 180px;
+  height: 170px;
   width: 50%;
   background-color: $backColor1;
   display: -webkit-box; /* Webkit */
@@ -84,18 +88,50 @@ div + .bus__block1 {
   -moz-box-pack: justify; /* Mozilla */
   justify-content: space-between;
 }
+.bus__block1--right > div:nth-child(1) {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
 .bus__block1--right--recentAdr {
-  margin-top: 30px;
-  font-size: 4.7vw;
+  font-size: 5.4vw;
   text-align: center;
 }
+
+.bus__block1--right--recentAdr > div:nth-child(2) {
+  margin-top: 1.5vw;
+}
+
+.refresh-button {
+  display: inline-block;
+  height: 7vw;
+  margin-left: 7px;
+  transition: all 80ms ease-in-out;
+  -webkit-transition: all 80ms ease-in-out; /* Webkit prefix */
+  -moz-transition: all 80ms ease-in-out; /* Mozilla prefix */
+  -o-transition: all 80ms ease-in-out; /* Opera prefix */
+  -ms-transition: all 80ms ease-in-out; /* IE prefix */
+  &:hover {
+    cursor: pointer;
+  }
+  &:active {
+    transform: scale(2);
+    -webkit-transform: scale(2); /* Webkit prefix */
+    -moz-transform: scale(2); /* Mozilla prefix */
+    -o-transform: scale(2); /* Opera prefix */
+    -ms-transform: scale(2); /* IE prefix */
+  }
+}
+
 .bus__block1--right--arrow {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .arrow-img {
-  height: 6vw;
+  height: 5vw;
 }
 // select box
 .bus__block1--right--selectbox {
@@ -111,7 +147,7 @@ div + .bus__block1 {
   font-size: 4.5vw;
   font-weight: 900;
   text-align-last: center; // 중앙정렬
-  padding: 1vw 0.5vw;
+  padding: 2vw 1vw;
   border-radius: 20px;
   background-color: lighten($backColor1, 15%);
   color: $fontColor;
@@ -119,39 +155,11 @@ div + .bus__block1 {
   border: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   transition: background-color 80ms ease;
+  margin-bottom: 20px;
   &:hover {
     cursor: pointer;
   }
   &:active {
     background-color: lighten($backColor1, 25%);
-  }
-}
-
-.bus__block1--right--refresh-button {
-  display: -webkit-box; /* Webkit */
-  display: -moz-box; /* Mozilla */
-  display: flex;
-  -webkit-box-pack: end; /* Webkit */
-  -moz-box-pack: end; /* Mozilla */
-  justify-content: flex-end;
-  margin: 0 15px 10px 0;
-}
-.refresh-button {
-  display: inline-block;
-  height: 8vw;
-  transition: all 80ms ease-in-out;
-  -webkit-transition: all 80ms ease-in-out; /* Webkit prefix */
-  -moz-transition: all 80ms ease-in-out; /* Mozilla prefix */
-  -o-transition: all 80ms ease-in-out; /* Opera prefix */
-  -ms-transition: all 80ms ease-in-out; /* IE prefix */
-  &:hover {
-    cursor: pointer;
-  }
-  &:active {
-    transform: scale(1.3);
-    -webkit-transform: scale(1.3); /* Webkit prefix */
-    -moz-transform: scale(1.3); /* Mozilla prefix */
-    -o-transform: scale(1.3); /* Opera prefix */
-    -ms-transform: scale(1.3); /* IE prefix */
   }
 }
