--- a/src/style/MenuBox.module.scss
+++ b/src/style/MenuBox.module.scss
@@ -16,7 +16,7 @@ $gray-00: #f8f9fa; // 기본글자색
 }
 .menu-box__menus {
   position: fixed;
-  top: 30vh;
+  top: 37vh;
   z-index: 100;
   display: -webkit-flex; /* 웹킷 */
   display: flex;
@@ -24,12 +24,15 @@ $gray-00: #f8f9fa; // 기본글자색
   flex-direction: column;
   -webkit-align-items: center; /* 웹킷 */
   align-items: center;
-  font-size: 40px;
-  letter-spacing: 2px;
+  // font-size: 40px;
+  font-size: 10.26vw;
+  // letter-spacing: 2px;
+  letter-spacing: 0.51vw;
   color: $gray-00;
 }
 .menu-box__menu {
-  margin: 10px 0;
+  // margin: 10px 0;
+  margin: 2.56vw 0;
   text-decoration: none;
   transition: all 50ms ease-in-out;
   -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
@@ -46,10 +49,12 @@ $gray-00: #f8f9fa; // 기본글자색
 }
 // 활성화된 라우터 표시
 .menu-box__menu-active {
-  margin: 10px 0;
+  // margin: 10px 0;
+  margin: 2.56vw 0;
   text-decoration: underline;
   text-decoration-style: double;
-  text-decoration-thickness: 1.5px;
+  // text-decoration-thickness: 1.5px;
+  text-decoration-thickness: 0.38vw;
   transition: all 50ms ease-in-out;
   -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
   -moz-transition: all 50ms ease-in-out; /* Mozilla prefix */
@@ -64,15 +69,22 @@ $gray-00: #f8f9fa; // 기본글자색
   }
 }
 .menu-box__exit {
-  font-size: 15px;
+  // font-size: 15px;
+  font-size: 3.85vw;
   font-weight: 900;
-  letter-spacing: 2px;
-  margin-top: 50px;
-  padding: 7px;
+  // letter-spacing: 2px;
+  letter-spacing: 0.51vw;
+  // margin-top: 50px;
+  margin-top: 12.82vw;
+  // padding: 7px;
+  padding: 1.79vw;
   border: 1px solid $gray-00;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
+  // -moz-border-radius: 5px;
+  // -webkit-border-radius: 5px;
+  // border-radius: 5px;
+  -moz-border-radius: 1.28vw;
+  -webkit-border-radius: 1.28vw;
+  border-radius: 1.28vw;
   -moz-transition: transform 50ms ease-in-out;
   -webkit-transition: transform 50ms ease-in-out;
   transition: transform 50ms ease-in-out;
