--- a/src/style/NotificationBox.module.scss
+++ b/src/style/NotificationBox.module.scss
@@ -14,7 +14,8 @@
   width: 80%;
   height: 22vw;
   background-color: #2e4f4f;
-  border-radius: 25px;
+  // border-radius: 25px;
+  border-radius: 6.41vw;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   > div:nth-child(1) {
     font-size: 6vw;
