--- a/src/style/Footer.module.scss
+++ b/src/style/Footer.module.scss
@@ -4,8 +4,10 @@ $font: #868e96; // 기본글자색
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40px;
-  margin-top: 13px;
+  // height: 40px;
+  height: 10.26vw;
+  // margin-top: 13px;
+  margin-top: 3.33vw;
   border-top: 1px solid #343a40;
   color: $font;
 }
