--- a/src/style/Header.module.scss
+++ b/src/style/Header.module.scss
@@ -10,16 +10,21 @@ $gray-09: #212529; // 기본배경색
   justify-content: space-between;
   -webkit-align-items: center; /* Safari */
   align-items: center;
-  height: 70px;
+  // height: 70px;
+  height: 17.95vw;
   z-index: 80;
 }
 .header__logo {
-  margin-left: 20px;
-  height: 45px;
+  // margin-left: 20px;
+  margin-left: 5.13vw;
+  // height: 45px;
+  height: 11.54vw;
 }
 .header__button {
-  margin-right: 20px;
-  height: 50px;
+  // margin-right: 20px;
+  margin-right: 5.13vw;
+  // height: 50px;
+  height: 12.82vw;
   transition: all 50ms ease-in-out;
   -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
   -moz-transition: all 50ms ease-in-out; /* Mozilla prefix */
