--- a/src/style/PopUpMap.module.scss
+++ b/src/style/PopUpMap.module.scss
@@ -14,7 +14,7 @@ $gray-00: #f8f9fa; // 기본글자색
     z-index: 90;
   }
   .pop-up-map__kakao-map--wrapper {
-    width: 93.34%;
+    width: 93.4%;
     position: fixed;
     top: 15vw;
     z-index: 100;
@@ -35,6 +35,8 @@ $gray-00: #f8f9fa; // 기본글자색
       word-break: keep-all;
     }
     .pop-up-map__close {
+      position: fixed;
+      bottom: 5.13vw;
       // font-size: 15px;
       font-size: 3.85vw;
       font-weight: 900;
