--- a/src/style/PopUpMap.module.scss
+++ b/src/style/PopUpMap.module.scss
@@ -14,8 +14,11 @@ $gray-00: #f8f9fa; // 기본글자색
     z-index: 90;
   }
   .pop-up-map__kakao-map--wrapper {
+    display: flex;
+    justify-content: center;
     position: fixed;
-    top: 15vw;
+    top: 0;
+    height: 100vh;
     z-index: 100;
     display: -webkit-flex; /* 웹킷 */
     display: flex;
@@ -34,8 +37,6 @@ $gray-00: #f8f9fa; // 기본글자색
       word-break: keep-all;
     }
     .pop-up-map__close {
-      position: fixed;
-      bottom: 5.13vw;
       // font-size: 15px;
       font-size: 3.85vw;
       font-weight: 900;
