header width set

--- a/src/style/Header.module.scss
+++ b/src/style/Header.module.scss
@@ -12,6 +12,7 @@ $gray-09: #212529; // 기본배경색
   align-items: center;
   // height: 70px;
   height: 17.95vw;
+  width: 100%;
   z-index: 80;
 }
 .header__logo {
