--- a/src/style/Title.module.scss
+++ b/src/style/Title.module.scss
@@ -1,6 +1,8 @@
 $iconBackground: #404258;
+$gray-09: #212529; // 기본배경색
 
 .title {
+  background-color: $gray-09;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
